Fixed alignment for last row

--- a/src/components/Consonants/style.css
+++ b/src/components/Consonants/style.css
@@ -1,3 +1,8 @@
+.table {
+  display: flex;
+  align-items: flex-start;
+  flex-direction: column;
+}
 .row {
   display: flex;
   margin: 0;
